# restrictedusermanager

./: .gitignore  ChangeLog  Makefile  Makefile.in  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool  resctrictedusermanager.yaml.example  restrictedusermanager.yaml.example
po/: ChangeLog  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  restrictedusermanager.cpp
src/.deps/: restrictedusermanager.Po
